cmake_minimum_required(VERSION 3.5)
project(SimpleVRCpp CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIR})

#########################################################
# FIND OPENGL
#########################################################
IF(APPLE)
    add_definitions(-DGL_SILENCE_DEPRECATION)
	include_directories(/System/Library/Frameworks)
    FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
    MARK_AS_ADVANCED (OpenGL_LIBRARY)
    SET(EXTRA_LIBS ${OpenGL_LIBRARY})
ELSE (APPLE)
    find_package(OpenGL REQUIRED)
	include_directories(${OPENGL_INCLUDE_DIR})
    IF(UNIX)
        find_package(GLEW REQUIRED)
    ELSE(UNIX)
        find_package(glew REQUIRED)
    ENDIF(UNIX)
	include_directories(${GLEW_INCLUDE_DIR})
    SET(EXTRA_LIBS ${OPENGL_LIBRARY} ${GLEW_LIBRARY})
ENDIF (APPLE)

option(USE_OPENVR "Enable OpenVR" ON)

set(OPENVR_LIB)
IF (USE_OPENVR)
	find_package(OpenVR REQUIRED)
	include_directories(${OPENVR_INCLUDE_DIRS})
	IF(APPLE)
        if(${OPENVR_PLATFORM} MATCHES "osx32")
            set(OPENVR_LIB "${OPENVR_ROOT_DIR}/lib/${OPENVR_PLATFORM}/libopenvr_api.dylib")
        else()
            set(OPENVR_LIB "${OPENVR_ROOT_DIR}/lib/${OPENVR_PLATFORM}/OpenVR.framework")
        endif()
        MESSAGE("${OPENVR_LIB}")
    ELSE(APPLE)
        set(OPENVR_LIB "${OPENVR_ROOT_DIR}/lib/${OPENVR_PLATFORM}/openvr_api.lib")
    ENDIF(APPLE)
	add_executable(SimpleVRCppOpenVR main_openvr.cpp)
	target_link_libraries(SimpleVRCppOpenVR ${EXTRA_LIBS} ${SDL2_LIBRARY} ${OPENVR_LIB} )
ENDIF(USE_OPENVR)

option (USE_OCULUS "Enable OculusSDK" ON)
set(OCULUS_LIB)
if (USE_OCULUS)
	FIND_PACKAGE( OculusSDK REQUIRED)
	if (OCULUS_SDK_FOUND)
		include_directories(${OCULUS_SDK_INCLUDE_DIRS})
		set(OCULUS_LIB "${OCULUS_SDK_LIBRARIES}")
		IF(UNIX)
			add_definitions(-DSRE_OCULUS)
		ELSE(UNIX)	
			add_definitions(/DSRE_OCULUS)
		ENDIF(UNIX)
	endif(OCULUS_SDK_FOUND)
	add_executable(SimpleVRCppOculusVR main_oculus.cpp)
	target_link_libraries(SimpleVRCppOculusVR ${EXTRA_LIBS} ${SDL2_LIBRARY} ${OCULUS_LIB} )
endif (USE_OCULUS)

IF (WIN32)
    SET(SDL2_dll "" CACHE STRING "Where the SDL2.dll can be found")
    SET(DLLFileList ${SDL2_dll})
	IF (USE_OPENVR)	
		SET(DLLFileList "${DLLFileList}" "${OPENVR_ROOT_DIR}/bin/${OPENVR_PLATFORM}/openvr_api.dll")
	ENDIF (USE_OPENVR)
	file(COPY ${DLLFileList} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
ENDIF(WIN32)

